--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -31,6 +31,9 @@ body {
 .mailchimp-form {
   margin-top: 65px; }
 
+input:focus {
+  outline: none; }
+
 input[type="email"] {
   border: 0;
   -moz-border-radius: 15px;
