Remove the underline on the footer

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -66,4 +66,5 @@ input[type="submit"] {
   right: 10px;
   color: #fff; }
   .page-footer a {
-    color: #fff; }
+    color: #fff;
+    text-decoration: none; }
