--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,7 +22,7 @@ section.page-container{
 }
 
 h1, p{
-    font-family: 'Proxima Nova';
+    font-family: 'Proxima Nova', "proxima-nova", sans-serif;
 }
 
 h1{
@@ -47,7 +47,7 @@ input[type="email"]{
     -webkit-appearance: none;
     padding: 12px 24px;
     font-size: 1.5em;
-    font-family: 'Fira Sans';
+    font-family: 'Fira Sans', "fira-sans";
     font-weight: 100;
     border-radius: 6px;
     background-color: rgba( 0,0,0,0.1);
@@ -80,7 +80,7 @@ input[type="submit"]{
     background: white;
     border: none;
     font-size: 1.2em;
-    font-family: 'Proxima Nova';
+    font-family: 'Proxima Nova', "proxima-nova", sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     padding: 22px 24px;
@@ -99,7 +99,7 @@ span{
     bottom: 6px;
     text-align: center;
     width: 100%;
-    font-family: 'Proxima Nova';
+    font-family: 'Proxima Nova', "proxima-nova", sans-serif;
     font-size: 0.8em;
 }
 span a{
